--- a/usuarios/pom.xml
+++ b/usuarios/pom.xml
@@ -7,12 +7,23 @@
   <version>1.0-SNAPSHOT</version>
   <name>usuarios</name>
   <url>http://maven.apache.org</url>
+  
   <dependencies>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+    <dependency>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>
+        <version>2.6.0</version>
+    </dependency>
+    
   </dependencies>
+  
 </project>
