--- a/usuarios/pom.xml
+++ b/usuarios/pom.xml
@@ -26,4 +26,28 @@
     
   </dependencies>
   
+  <build>
+    <plugins>
+      
+      <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>1.4.0</version>
+      <configuration>
+        <mainClass>es.caixa.App</mainClass>
+      </configuration>
+      <executions>
+        <execution>
+        <id>id.ejecutar</id>
+        <phase>compile</phase>
+        <goals>
+          <goal>java</goal>
+        </goals>
+        </execution>
+      </executions>
+      </plugin>
+      
+    </plugins>
+  </build>
+  
 </project>
