--- a/miwebapph/pom.xml
+++ b/miwebapph/pom.xml
@@ -23,8 +23,23 @@
         <version>2.5</version>
         <scope>provided</scope>
     </dependency>
-    
         
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.2.3.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+
     
   </dependencies>
   
@@ -37,7 +52,7 @@
               <artifactId>tomcat7-maven-plugin</artifactId>
               <version>2.2</version>
               <configuration>
-                  <url>http://tomcat:8080/manager/text</url>
+                  <url>http://localhost:8080/manager/text</url>
                   <server>mitomcat</server>
                   <path>/miwebapp</path>
               </configuration>
